# sales-intelligence-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
demo/: index.html  predictions.json
docs/: architecture.md  decisions.md  scalability.md
src/: config.py
src/agents/: email_writer.py  orchestrator.py  planner.py  profile_builder.py  reflector.py
src/api/: main.py  schemas.py
src/eval/: runner.py
src/tools/: hackernews.py  web_search.py
tests/: test_email_personalization.py  test_health.py  test_orchestrator_e2e.py  test_planner_heuristic.py  test_reflector_heuristic.py  test_web_search_stub.py
