[project]
name = "sales-intelligence-agent"
version = "0.1.0"
description = "B2B Sales Intelligence — planner-executor-reflector agent over YC + Tavily"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.115.0", "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2", "pydantic-settings==2.6.0", "python-dotenv==1.0.1",
    "httpx==0.27.2", "tenacity==9.0.0", "loguru==0.7.2",
    "anthropic==0.39.0", "langchain-anthropic==0.2.4", "langgraph==0.2.45",
    "tavily-python==0.5.0",
    "selectolax==0.3.21",
    "psycopg[binary,pool]==3.2.3",
]

[project.optional-dependencies]
dev = ["pytest==8.3.3", "pytest-asyncio==0.24.0", "ruff==0.6.9", "black==24.10.0", "mypy==1.11.2"]
